2nd Commit - User
1. Update User Details - dashboard.js

Note: Unable to load Current User from localStorage due to pre-loader-box

--- a/dashboard.html
+++ b/dashboard.html
@@ -50,7 +50,7 @@
 						<span class="user-icon">
 							<img src="vendors/images/photo1.jpg" alt="">
 						</span>
-						<span class="user-name">Johnny B Coleman</span>
+						<span class="user-name user-full-name">Johnny B Coleman</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
 						<a class="dropdown-item" href="profile.html"><i class="dw dw-user1"></i>Profile</a>
@@ -126,9 +126,13 @@
 					</div>
 					<div class="col-md-8">
 						<h4 class="font-20 weight-500 mb-10 text-capitalize">
-							Welcome back <div class="weight-600 font-30 text-blue">Johnny Brown!</div>
+							Welcome back <span class="user-first-name weight-600 font-30 text-blue">Johnny Brown!</span>
 						</h4>
-						<p class="font-18 max-width-600">Good Morning, Johnny I hope you have a great day!</p>
+						<p class="font-18 max-width-600">
+							Good Morning,
+							<span class="user-first-name"></span>
+							I hope you have a great day!
+						</p>
 					</div>
 				</div>
 			</div>
@@ -485,6 +489,7 @@
 	<script src="src/plugins/datatables/js/dataTables.responsive.min.js"></script>
 	<script src="src/plugins/datatables/js/responsive.bootstrap4.min.js"></script>
 	<script src="vendors/scripts/dashboard.js"></script>
+	<script src="js/myjs/dashboard/dashboard.js"></script>
 </body>
 
 </html>
