3rd Commit - Supervisor Name List
1. Fetch Supervisor Name List - production-form.js

--- a/form-produksi.html
+++ b/form-produksi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
 	<!-- Basic Page Info -->
@@ -113,7 +113,7 @@
 						<ul class="submenu">
 							<li><a href="dashboard_gudang.html">Warehouse Dashboard</a></li>
 						</ul>
-					</li>					
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -152,7 +152,7 @@
 									<div class="col-md-6">
 										<div class="form-group">
 											<label >Supervisor Name :</label>
-											<select class="custom-select form-control">
+											<select id="select-supervisor" class="custom-select form-control">
 												<option value="">Choose Supervisor Name</option>
 												<option value="Samsul B">Samsul B</option>
 												<option value="Yeri S">Yeri S</option>
@@ -285,7 +285,7 @@
 					</div>
 				</div>
 				<!-- success Popup html End -->
-                
+
 			</div>
 			<div class="footer-wrap pd-20 mb-20 card-box">
 				Design for Internal Use Only
@@ -306,6 +306,10 @@
 	<script src="vendors/scripts/dashboard.js"></script>
     <script src="src/plugins/jquery-steps/jquery.steps.js"></script>
 	<script src="vendors/scripts/steps-setting.js"></script>
+
+	<script src="js/myjs/form/production-form.js"></script>
+
+
 </body>
 
 </html>
