4th Commit - Initialize & Update Production Form Lists.
1. Initialize & update production form with supervisorNameList, sizeList.
2. onProductionSubmitBtnClick() -> Initialize production object by loading values from production form.
3. Added Production model.

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/dashboard.html
+++ b/dashboard.html
@@ -75,7 +75,7 @@
 			<div class="sidebar-menu">
 				<ul id="accordion-menu">
 					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
+						<a href="javascript:" class="dropdown-toggle">
 							<span class="micon dw dw-house-1"></span><span class="mtext">Home</span>
 						</a>
 						<ul class="submenu">
@@ -83,7 +83,7 @@
 						</ul>
 					</li>
 					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
+						<a href="javascript:" class="dropdown-toggle">
 							<span class="micon dw dw-edit2"></span><span class="mtext">Production</span>
 						</a>
 						<ul class="submenu">
@@ -94,7 +94,7 @@
 						</ul>
 					</li>
 					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
+						<a href="javascript:" class="dropdown-toggle">
 							<span class="micon dw dw-analytics-21"></span><span class="mtext">Selling</span>
 						</a>
 						<ul class="submenu">
@@ -104,13 +104,13 @@
 						</ul>
 					</li>
 					<li class="dropdown">
-						<a href="javascript:;" class="dropdown-toggle">
+						<a href="javascript:" class="dropdown-toggle">
 							<span class="micon dw dw-apartment"></span><span class="mtext">Warehouse</span>
 						</a>
 						<ul class="submenu">
 							<li><a href="dashboard_gudang.html">Warehouse Dashboard</a></li>
 						</ul>
-					</li>					
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -126,7 +126,7 @@
 					</div>
 					<div class="col-md-8">
 						<h4 class="font-20 weight-500 mb-10 text-capitalize">
-							Welcome back <span class="user-first-name weight-600 font-30 text-blue">Johnny Brown!</span>
+							Welcome back <span class="user-full-name weight-600 font-30 text-blue">Johnny Brown!</span>
 						</h4>
 						<p class="font-18 max-width-600">
 							Good Morning,
