--- a/selling_manager.html
+++ b/selling_manager.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <!-- Basic Page Info -->
@@ -451,6 +451,8 @@
             <script src="src/plugins/datatables/js/responsive.bootstrap4.min.js"></script>
             <script src="vendors/scripts/dashboard.js"></script>
             <script src="vendors/scripts/apexcharts1-setting.js"></script>
+        </div>
+    </div>
 </body>
 
 </html>
