9th Commit - Network Failure Popup
1. Added CSS class remove-spinner for input number elements
2. Added network failure popup on submit btn. click

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/form-pemasaran.html
+++ b/form-pemasaran.html
@@ -300,6 +300,24 @@
 				</div>
 				<!-- success Popup html End -->
 
+				<!-- Failure Popup html Start -->
+				<div class="modal fade" id="failure-modal" tabindex="-1" role="dialog"
+					aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered" role="document">
+						<div class="modal-content">
+							<div class="modal-body text-center font-18">
+								<h3 class="mb-20">Connection Timed Out.</h3>
+								<div class="mb-30 text-center"><img src="vendors/images/cross.png" alt="cross img."></div>
+								<p>Network Error: Unable to establish connection with Back-end REST API.</p>
+							</div>
+							<div class="modal-footer justify-content-center">
+								<button type="button" class="btn btn-primary" data-dismiss="modal">Done</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Failure Popup html End -->
+
 			</div>
 			<div class="footer-wrap pd-20 mb-20 card-box">
 				Design for Internal Use Only
@@ -312,12 +330,6 @@
 	<script src="vendors/scripts/script.min.js"></script>
 	<script src="vendors/scripts/process.js"></script>
 	<script src="vendors/scripts/layout-settings.js"></script>
-	<script src="src/plugins/apexcharts/apexcharts.min.js"></script>
-	<script src="src/plugins/datatables/js/jquery.dataTables.min.js"></script>
-	<script src="src/plugins/datatables/js/dataTables.bootstrap4.min.js"></script>
-	<script src="src/plugins/datatables/js/dataTables.responsive.min.js"></script>
-	<script src="src/plugins/datatables/js/responsive.bootstrap4.min.js"></script>
-	<script src="vendors/scripts/dashboard.js"></script>
 	<script src="src/plugins/jquery-steps/jquery.steps.js"></script>
 	<script src="vendors/scripts/steps-setting.js"></script>
 
