--- a/form-corrugation.html
+++ b/form-corrugation.html
@@ -147,12 +147,14 @@
                     <h4 class="text-blue h4">Corrugation Form</h4>
                     <p class="mb-30">Daily Corrugation Form</p>
                 </div>
-                <form>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="corru-input-date">Date :</label>
-                            <input id="corru-input-date" type="text" class="form-control date-picker"
-                                   placeholder="Select Date">
+                <div id="corru-form">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="corru-input-date">Date :</label>
+                                <input id="corru-input-date" type="text" class="form-control date-picker"
+                                       placeholder="Select Date">
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -217,14 +219,55 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="corru-select-amount">Amount :</label>
-                            <input id="corru-select-amount" type="text" class="form-control">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="corru-select-amount">Amount :</label>
+                                <input id="corru-select-amount" type="text" class="form-control">
+                            </div>
                         </div>
                     </div>
-                    <input class="btn btn-primary" type="submit" value="Submit">
-                </form>
+                    <input class="btn btn-primary" type="submit" onclick="onSubmitCorrugationForm()">
+                </div>
+
+                <!-- success Popup html Start -->
+                <div class="modal fade" id="success-modal" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-body text-center font-18">
+                                <h3 class="mb-20">Form Submitted!</h3>
+                                <div class="mb-30 text-center"><img src="vendors/images/success.png" alt="success img.">
+                                </div>
+                                Thank You
+                            </div>
+                            <div class="modal-footer justify-content-center">
+                                <button type="button" class="btn btn-primary" data-dismiss="modal">Done</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- success Popup html End -->
+
+                <!-- Failure Popup html Start -->
+                <div class="modal fade" id="failure-modal" tabindex="-1" role="dialog"
+                     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-body text-center font-18">
+                                <h3 class="mb-20">Connection Timed Out.</h3>
+                                <div class="mb-30 text-center"><img src="vendors/images/cross.png" alt="cross img.">
+                                </div>
+                                <p>Network Error: Unable to establish connection with Back-end REST API.</p>
+                            </div>
+                            <div class="modal-footer justify-content-center">
+                                <button type="button" class="btn btn-primary" data-dismiss="modal">Done</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Failure Popup html End -->
+
             </div>
             <div class="footer-wrap pd-20 mb-20 card-box">Design for Internal Use Only</div>
         </div>
@@ -233,6 +276,13 @@
 </div>
 
 <!-- js -->
+<script src="vendors/scripts/core.js"></script>
+<script src="vendors/scripts/script.min.js"></script>
+<script src="vendors/scripts/process.js"></script>
+<script src="vendors/scripts/layout-settings.js"></script>
+<script src="src/plugins/jquery-steps/jquery.steps.js"></script>
+<script src="vendors/scripts/steps-setting.js"></script>
+
 <script src="js/myjs/form/date-helper.js"></script>
 <script src="js/myjs/form/corrugation-form.js"></script>
 
