11th Commit - Prevent Multiple Form Submission
1. Prevent multiple form submission by disabling Submit Form Button for all 3 forms (production, selling, corrugation form) and enable it only after response is received.

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/form-corrugation.html
+++ b/form-corrugation.html
@@ -227,7 +227,7 @@
                             </div>
                         </div>
                     </div>
-                    <input class="btn btn-primary" type="submit" onclick="onSubmitCorrugationForm()">
+                    <input id="corru-input-submit" class="btn btn-primary" type="submit" onclick="onSubmitCorrugationForm()">
                 </div>
 
                 <!-- success Popup html Start -->
