--- a/form-corrugation.html
+++ b/form-corrugation.html
@@ -285,6 +285,7 @@
 
 <script src="js/myjs/form/date-helper.js"></script>
 <script src="js/myjs/form/corrugation-form.js"></script>
+<script src="js/myjs/form/validation-helper.js"></script>
 
 </body>
 
