--- a/login.html
+++ b/login.html
@@ -1,100 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Basic Page Info -->
-	<meta charset="utf-8">
-	<title>Login - PT Sermani Steel</title>
+    <!-- Basic Page Info -->
+    <meta charset="utf-8">
+    <title>Login - PT Sermani Steel</title>
 
-	<!-- Site favicon -->
-	<link rel="apple-touch-icon" sizes="180x180" href="vendors/images/logo_besar.jpg">
-	<link rel="icon" type="image/png" sizes="32x32" href="vendors/images/logo_besar.jpg">
-	<link rel="icon" type="image/png" sizes="16x16" href="vendors/images/logo_besar.jpg">
+    <!-- Site favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="vendors/images/logo_besar.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="vendors/images/logo_besar.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="vendors/images/logo_besar.jpg">
 
-	<!-- Mobile Specific Metas -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Mobile Specific Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<!-- Google Font -->
-	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+          rel="stylesheet">
 
-	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="vendors/styles/core.css">
-	<link rel="stylesheet" type="text/css" href="vendors/styles/icon-font.min.css">
-	<link rel="stylesheet" type="text/css" href="vendors/styles/style.css">
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="vendors/styles/core.css">
+    <link rel="stylesheet" type="text/css" href="vendors/styles/icon-font.min.css">
+    <link rel="stylesheet" type="text/css" href="vendors/styles/style.css">
+
+    <link rel="stylesheet" type="text/css" href="css/css/forms.css">
 </head>
 <body class="login-page">
-	<div class="login-header box-shadow">
-		<div class="container-fluid d-flex justify-content-between align-items-center">
-			<div class="brand-logo">
-				<a href="index.html">
-					<img src="vendors/images/logo_besar.jpg" alt="">
-				</a>
-			</div>
-		</div>
-	</div>
-	<div class="login-wrap d-flex align-items-center flex-wrap justify-content-center">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-6 col-lg-7">
-					<img src="vendors/images/login-page-img.png" alt="">
-				</div>
-				<div class="col-md-6 col-lg-5">
-					<div class="login-box bg-white box-shadow border-radius-10">
-						<div class="login-title">
-							<h2 class="text-center text-primary">Login To Dashboard</h2>
-						</div>
-						<form>
-							<div class="input-group custom">
-								<label for="emailId"></label>
-								<input id="emailId" type="text" class="form-control form-control-lg" placeholder="Email Id">
-								<div class="input-group-append custom">
-									<span class="input-group-text"><i class="icon-copy dw dw-user1"></i></span>
-								</div>
-							</div>
-							<div class="input-group custom">
-								<label for="password"></label>
-								<input id="password" type="password" class="form-control form-control-lg" placeholder="**********">
-								<div class="input-group-append custom">
-									<span class="input-group-text"><i class="dw dw-padlock1"></i></span>
-								</div>
-							</div>
-							<div class="row pb-30">
-								<div class="col-6">
-									<div class="custom-control custom-checkbox">
-										<input onclick="onSignIn()" type="checkbox" class="custom-control-input" id="customCheck1">
-										<label class="custom-control-label" for="customCheck1">Remember</label>
-									</div>
-								</div>
-								<div class="col-6">
-									<div class="forgot-password"><a href="forgot-password.html">Forgot Password</a></div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-sm-12">
-									<div class="input-group mb-0">
-										<!--
-											use code for form submit
-											<input class="btn btn-primary btn-lg btn-block" type="submit" value="Sign In">
-										-->
-										<button class="btn btn-primary btn-lg btn-block"
-												onclick="onSignIn()">Sign In</button>
-									</div>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- js -->
-	<script src="vendors/scripts/core.js"></script>
-	<script src="vendors/scripts/script.min.js"></script>
-	<script src="vendors/scripts/process.js"></script>
-	<script src="vendors/scripts/layout-settings.js"></script>
+<div class="login-header box-shadow">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+        <div class="brand-logo">
+            <a href="index.html">
+                <img src="vendors/images/logo_besar.jpg" alt="">
+            </a>
+        </div>
+    </div>
+</div>
+<div class="login-wrap d-flex align-items-center flex-wrap justify-content-center">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-md-6 col-lg-7">
+                <img src="vendors/images/login-page-img.png" alt="">
+            </div>
+            <div class="col-md-6 col-lg-5">
+                <div class="login-box bg-white box-shadow border-radius-10">
+                    <div class="login-title">
+                        <h2 class="text-center text-primary">Login To Dashboard</h2>
+                    </div>
+                    <form id="login-form" action="dashboard.html">
+                        <div class="input-group custom">
+                            <label for="emailId"></label>
+                            <input id="emailId" type="text" class="form-control form-control-lg" placeholder="Email Id">
+                            <div class="input-group-append custom">
+                                <span class="input-group-text"><i class="icon-copy dw dw-user1"></i></span>
+                            </div>
+                        </div>
+                        <div class="input-group custom">
+                            <label for="password"></label>
+                            <input id="password" type="password" class="form-control form-control-lg"
+                                   placeholder="**********">
+                            <div class="input-group-append custom">
+                                <span class="input-group-text"><i class="dw dw-padlock1"></i></span>
+                            </div>
+                        </div>
+                        <div class="row pb-30">
+                            <div class="col-6">
+                                <div class="custom-control custom-checkbox">
+                                    <input onclick="onSignIn()" type="checkbox" class="custom-control-input"
+                                           id="customCheck1">
+                                    <label class="custom-control-label" for="customCheck1">Remember</label>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="forgot-password"><a href="forgot-password.html">Forgot Password</a></div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="input-group mb-0">
+                                    <!--
+                                        use code for form submit
+                                    -->
+                                    <input id="login-input-submit" class="btn btn-primary btn-lg btn-block" type="submit" value="Sign In"
+                                    onclick="onSignIn(); return false;">
+
+                                    <!--<button type="submit" class="btn btn-primary btn-lg btn-block"
+                                            onclick="
+                                            let r = -1;
+                                            await onSubmit1(1).then(value => {r = value});
+                                                console.log(r);
+                                            if(r) {
+                                                console.log('Yes'); return true;
+                                            }
+                                            console.log('No'); return false;
+                                            ">
+                                        Sign In
+                                    </button>-->
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- js -->
+<script src="vendors/scripts/core.js"></script>
+<script src="vendors/scripts/script.min.js"></script>
+<script src="vendors/scripts/process.js"></script>
+<script src="vendors/scripts/layout-settings.js"></script>
 
 
-	<!--  Import Custom JS  -->
-	<script src="js/myjs/login/login.js"></script>
+<!--  Import Custom JS  -->
+<script src="js/myjs/form/validation-helper.js"></script>
+<script src="js/myjs/login/login.js"></script>
+<script src="js/myjs/api/api-helper.js"></script>
 
 </body>
 </html>
