13th Commit - Invalid Credentials Popup
1. Added Connection Failure & Invalid Credentials Popups in login.html
2. Removed redundant code by using common helper js files -> api-helper.js & validation-helper.js

Signed-off-by: kohthecodemaster <kohthecodemaster@gmail.com>

--- a/form-produksi.html
+++ b/form-produksi.html
@@ -344,6 +344,8 @@
 <!--<script src="src/scripts/setting.js"></script>-->
 
 <script src="js/myjs/form/date-helper.js"></script>
+<script src="js/myjs/api/api-helper.js"></script>
+<script src="js/myjs/form/validation-helper.js"></script>
 <script src="js/myjs/form/validate-prod-form.js"></script>
 <script src="js/myjs/form/production-form.js"></script>
 
